trying to fix css-animations on ios

--- a/css/styles-light.scss
+++ b/css/styles-light.scss
@@ -114,15 +114,15 @@ body{
                 }
 
                 @-webkit-keyframes drop {
-                    from{height:2.4rem;}
-                    to{height:100%}
+                    from{-webkit-height:2.4rem;}
+                    to{-webkit-height:100%}
                 }
 
                 @-webkit-keyframes fade_in {
-                    from{opacity:0;}
-                    50%{opacity:0;}
-                    to{opacity:1;}
-                }
+                    from{-webkit-opacity:0;}
+                    50%{-webkit-opacity:0;}
+                    to{-webkit-opacity:1;}
+                }                
 
                 .dropdown{
                     display: none;
@@ -131,7 +131,7 @@ body{
                     width: 100%;
                     right: 0%;
                     border-bottom: 0.2rem solid $text_main;
-                    background-color:$background;                    
+                    background-color:$background;                       
                     
                     .mob_btn{
                         grid-column: 2/7;                        
@@ -198,8 +198,8 @@ body{
                             }
                         }
                     }
-                }
-
+                } 
+                
                 .dropdown_active{
                     display: grid;
                     grid-template-columns: 1fr 2fr 2fr 2fr 1fr 1fr 1fr;
